# elastic-appsearch

./: .gitignore  LICENSE.md  README.md  setup.cfg
elastic_appsearch/: __init__.py  elastic_appsearch.py
