[bdist_wheel]
universal = 1

[metadata]
name = elastic-appsearch
version = attr: elastic_appsearch.__version__
url = https://github.com/sunnysid3up/elastic-appsearch
author = Sunny Kim
author_email = sunny.kim@berkeley.edu
maintainer = Sunny Kim
maintainer_email = sunny.kim@berkeley.edu
license = MIT
description = Elastic App Search API Client
long_description = file: README.md
long_description_content_type= text/markdown
classifiers =
     Environment :: Web Environment
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Topic :: Software Development :: Libraries :: Python Modules
platforms=any

[options]
packages = elastic_appsearch
install_requires =
    requests>=2.23.0
python_requires=>=3
zip_safe = False
